0. refactor thrift-logger to move all thrift files to singer-commons module 1. add initial implementation of logging audit library to singer-commons 2. add AuditLogbackThriftLogger, AuditLogbackThriftLoggerFactory which can attach LoggingAuditHeaders to thrift object as well as to LogMessage