@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.pinterest.singer</groupId>
-    <artifactId>singer-package</artifactId>
-    <version>0.7.3.29</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <artifactId>thrift-logger</artifactId>
+
+  <artifactId>singer-commons</artifactId>
   <packaging>jar</packaging>
-  <description>Logging Agent Writer Client</description>
+  <description>Singer configuration and audit client library </description>
   <properties>
     <java.version>1.8</java.version>
     <junit.version>4.12</junit.version>
@@ -20,22 +15,36 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <slf4j.version>1.7.16</slf4j.version>
   </properties>
+
+  <parent>
+    <groupId>com.pinterest.singer</groupId>
+    <artifactId>singer-package</artifactId>
+    <version>0.7.3.29</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
+  <developers>
+    <developer>
+      <id>yuyang08</id>
+      <name>Yu Yang</name>
+    </developer>
+    <developer>
+      <id>ambud</id>
+      <name>Ambud Sharma</name>
+    </developer>
+    <developer>
+      <id>zzhhhzz</id>
+      <name>Heng Zhang</name>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>https://github.com/pinterest/singer.git</connection>
+    <developerConnection>https://github.com/pinterest/singer.git</developerConnection>
+    <url>https://github.com/pinterest/singer</url>
+  </scm>
+
   <dependencies>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-core</artifactId>
-      <version>1.0.13</version>
-    </dependency>
-    <dependency>
-      <groupId>com.twitter</groupId>
-      <artifactId>ostrich_2.11</artifactId>
-      <version>9.27.0</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-configuration</groupId>
-      <artifactId>commons-configuration</artifactId>
-      <version>1.9</version>
-    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
@@ -51,7 +60,7 @@
     <dependency>
       <groupId>org.apache.thrift</groupId>
       <artifactId>libthrift</artifactId>
-      <version>0.12.0</version>
+      <version>0.10.0</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -59,9 +68,9 @@
       <version>1.7.2</version>
     </dependency>
     <dependency>
-      <groupId>com.pinterest.singer</groupId>
-      <artifactId>singer-commons</artifactId>
-      <version>${project.version}</version>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
     </dependency>
   </dependencies>
   <build>
@@ -170,6 +179,13 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-Xmx4096m -XX:MaxPermSize=256m</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
